<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weight"
    tools:context=".FLength">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:background="#272956" />

    <EditText
        android:id="@+id/value1"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_toStartOf="@+id/spin1"
        android:autofillHints=""
        android:background="#FF7070"
        android:backgroundTint="#FF0000"
        android:drawableRight="@android:drawable/ic_menu_edit"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/value"
        android:inputType="number"
        android:textColorHint="#FFFFFF"
        android:textSize="@dimen/_20ssp"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck" />

    <Spinner
        android:id="@+id/spin1"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_38sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_11sdp"
        android:background="@android:drawable/btn_dropdown"
        android:contentDescription="@string/Select"
        android:dropDownWidth="match_parent"
        android:dropDownSelector="@android:drawable/arrow_down_float"
        android:popupBackground="#FF0000"
        app:layout_constraintVertical_bias="0.688"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_0sdp"
        android:background="#FF9100"
        android:drawableRight="@drawable/baseline_fitness_center_24"
        android:fadingEdge="horizontal"
        android:gravity="left"
        android:shadowColor="#000000"
        android:text="   Kilogram"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/KM1"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/HM1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_toStartOf="@+id/textView13"
        android:background="#1565C0"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:text="000.00"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:id="@+id/DG1"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/CG1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_toStartOf="@+id/textView4"
        android:background="#FF8F00"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:text="@string/_000_00"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/_156sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_0sdp"
        android:background="#1565C0"
        android:drawableRight="@drawable/baseline_fitness_center_24"
        android:fadingEdge="horizontal"
        android:gravity="left"
        android:shadowColor="#000000"
        android:text="   Decigram"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/CG1"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/MG1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_155sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_toStartOf="@+id/textView6"
        android:background="#1565C0"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:text="000.00"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:id="@+id/TON"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/KM1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_toStartOf="@+id/textView12"
        android:background="#FF8F00"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:text="000.00"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:background="#FF9100"
        android:drawableRight="@drawable/baseline_fitness_center_24"
        android:fadingEdge="horizontal"
        android:gravity="left"
        android:shadowColor="#000000"
        android:text="   Gram"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_0sdp"
        android:background="#1565C0"
        android:drawableRight="@drawable/baseline_fitness_center_24"
        android:fadingEdge="horizontal"
        android:gravity="left"
        android:shadowColor="#000000"
        android:text="   Hectogram"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/HM1"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/GM1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_toStartOf="@+id/textView10"
        android:background="#FF8F00"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:text="000.00"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/GM1"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/DG1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_toStartOf="@+id/textView11"
        android:background="#1565C0"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:text="000.00"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:background="#1565C0"
        android:drawableRight="@drawable/baseline_fitness_center_24"
        android:fadingEdge="horizontal"
        android:gravity="left"
        android:shadowColor="#000000"
        android:text="   Metric ton"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/_156sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_0sdp"
        android:background="#FF9100"
        android:drawableRight="@drawable/baseline_fitness_center_24"
        android:fadingEdge="horizontal"
        android:gravity="left"
        android:shadowColor="#000000"
        android:text="   Centigram"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/_156sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/spin1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_49sdp"
        android:layout_marginEnd="@dimen/_0sdp"
        android:background="#1565C0"
        android:drawableRight="@drawable/baseline_fitness_center_24"
        android:fadingEdge="horizontal"
        android:gravity="left"
        android:shadowColor="#283593"
        android:text="   Milligram"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/MG1"
        android:layout_width="@dimen/_155sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/value1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_0sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_toStartOf="@+id/textView5"
        android:background="#FF8F00"
        android:fontFamily="sans-serif-condensed"
        android:gravity="right"
        android:text="000.00"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15ssp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/_117sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_295sdp"
        android:backgroundTint="#FF0000"
        android:text="Convert"
        app:icon="@drawable/baseline_sync_24" />


</RelativeLayout>
